--- a/Assignment.html
+++ b/Assignment.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>HTML Template Assignment</title>
-		<meta> charset="utf-8">
+		<title>Eat & Drink in Asheville</title>
 	</head>
 	<body>
+		<h1> Where to Eat & Drink in Asheville, North Carolina in 2024 </h1>
+		<h3> These are the Best Breweries in Asheville </h3>
+			<p> Burial Brewing, 
+				New Orgin Brewing, 
+				Dssolvr, 
+				Zebulon Artisan Ales,
+				TRVE Brewing
+			</p>
+		<h3> These are the Best Restaurants in Asheville </h3>
+			<p> Chai Pani, 
+				Cucina 24, 
+				Curate, 
+				Forestry Camp, 
+				White Duck Taco 
+			</p>
+		<h6> Thank you for visiting! </h6>
 	</body>
 </html>
