HTML Documents Submission Assigment
These are all documents related to my HTML Documents Submission Assignment. "2024_Patriots_Draft_Home.html" should be treated as Home for this assignment.

--- a/Assignment.html
+++ b/Assignment.html
@@ -4,21 +4,37 @@
 		<title>Eat & Drink in Asheville</title>
 	</head>
 	<body>
-		<h1> Where to Eat & Drink in Asheville, North Carolina in 2024 </h1>
-		<h3> These are the Best Breweries in Asheville </h3>
-			<p> Burial Brewing, 
-				New Orgin Brewing, 
-				Dssolvr, 
-				Zebulon Artisan Ales,
-				TRVE Brewing
-			</p>
-		<h3> These are the Best Restaurants in Asheville </h3>
-			<p> Chai Pani, 
-				Cucina 24, 
-				Curate, 
-				Forestry Camp, 
-				White Duck Taco 
-			</p>
-		<h6> Thank you for visiting! </h6>
+		<nav>
+			<a href="Assignment.html">Home</a>
+			<a href="Dog.html">Dog Picture</a>
+			<a href="Dog_Video.html">Dog Video</a>
+		</nav>
+			<main>
+				<h1> Where to Eat & Drink in Asheville, North Carolina in 2024 </h1>
+				<blockquote cite="https://www.travelandleisure.com/food-drink/asheville-north-carolina-top-food-destination">Located in the Blue Ridge Mountains, the North Carolina city of Asheville is once again making waves for its innovative culinary scene, earning the No. 1 spot in Yelp's newly released top cities for foodies survey, an honor it also received in 2020.</blockquote>
+				<img src="Asheville_View.jpg" alt="View of Downtown Asheville and Mountains" width="850" height="500"></img>
+				
+				<h3> These are my Top 5 Favorite Breweries in Asheville </h3>
+					<p> <a href="https://burialbeer.com/cdn/shop/files/9S1A5607_copy.jpg?v=1711986195&width=1860">Burial Brewing</a>, 
+						New Orgin Brewing, 
+						Dssolvr, 
+						Zebulon Artisan Ales,
+						TRVE Brewing
+					</p>
+				<h3> These are my Top 5 Restaurants in Asheville </h3>
+					<p> Chai Pani, 
+						Cucina 24, 
+						Curate, 
+						Forestry Camp, 
+						White Duck Taco 
+					</p>
+				<h3> Check out this video on eating & drinking around Asheville!</h3>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/ra4srpL4C-Y?si=HQBZjylCEReQ8U5G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<h6> Thank you for visiting! </h6>
+				<a href="Dog.html">Image of Dog</a>
+			</main>
+		
+		<footer> Copyright JAL. 2024. </footer>
 	</body>
+	
 </html>
