Editing File Names and Structure to re-organize

--- a/HTML_Documents_NFL_Draft/2024_Patriots_Draft_Home.html
+++ b/HTML_Documents_NFL_Draft/2024_Patriots_Draft_Home.html
@@ -14,7 +14,7 @@
 		</nav>
 			<main>
 				<h1> 2024 New England Patriots Draft Picks </h1>
-				<img src="2024_Draft_Maye.jpg" alt="Quarterback Drake Maye and NFL Commisioner Roger Goodell" width="500" height="350"></img>
+				<img src="./images/2024_Draft_Maye.jpg" alt="Quarterback Drake Maye and NFL Commisioner Roger Goodell" width="500" height="350"></img>
 				
 				<h3> Picks Made: </h3>
 					<p> 1st Round, QB Drake Maye, UNC // 
