Updated file names and paths to re-organize

--- a/HTML_Assignment/Assignment.html
+++ b/HTML_Assignment/Assignment.html
@@ -12,7 +12,7 @@
 			<main>
 				<h1> Where to Eat & Drink in Asheville, North Carolina in 2024 </h1>
 				<blockquote cite="https://www.travelandleisure.com/food-drink/asheville-north-carolina-top-food-destination">Located in the Blue Ridge Mountains, the North Carolina city of Asheville is once again making waves for its innovative culinary scene, earning the No. 1 spot in Yelp's newly released top cities for foodies survey, an honor it also received in 2020.</blockquote>
-				<img src="Asheville_View.jpg" alt="View of Downtown Asheville and Mountains" width="850" height="500"></img>
+				<img src="./images/Asheville_View.jpg" alt="View of Downtown Asheville and Mountains" width="850" height="500"></img>
 				
 				<h3> These are my Top 5 Favorite Breweries in Asheville </h3>
 					<p> <a href="https://burialbeer.com/cdn/shop/files/9S1A5607_copy.jpg?v=1711986195&width=1860">Burial Brewing</a>, 
