--- a/HTML_Assignment/Dog.html
+++ b/HTML_Assignment/Dog.html
@@ -11,7 +11,7 @@
 			<a href="Dog_Video.html">Dog Video</a>
 		</nav>
 			<main>
-				<img src="Marnie_dog.jpg" width="375" height="400">
+				<img src="./images/Marnie_dog.jpg" width="375" height="400">
 			</main>
 		<footer> </footer>
 		<a href="Assignment.html">Home</a>
