Website Project Files

--- a/HTML_Website_Project/Index.html
+++ b/HTML_Website_Project/Index.html
@@ -41,7 +41,7 @@
 							<img src="./images/thumb/thumbnail_1.jpg" alt="Axiom Bridge">
 							<div>
 								<h3>Click to Enlarge</h3>
-								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
+								<p>We have space launches departing daily, book your flight today!</p>
 							<div>
 						<div>
 					<div>
