--- a/One_Page_Website_Project/index.html
+++ b/One_Page_Website_Project/index.html
@@ -25,9 +25,9 @@
 			<div class="container">
 				<div class="text-center">
 					<span class="head-main">Marigold's Bakery </span>
-				<div>
-			<div>
-		<div>
+				</div>
+			</div>
+		</div>
 		<!-- END HOME -->
 		
 		
@@ -145,7 +145,7 @@
 					</div>
 					<!-- END PHOTO-CONTAINER 9-->
 				</div>
-			</section>
+			</div>
 		</section>		
 		<!-- END GALLERY -->
 		
