Added CSS to Axiom One Page Website

--- a/HTML_Website_Project/one_page_website_axiom.html
+++ b/HTML_Website_Project/one_page_website_axiom.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>The Axiom Space Station | Resort</title>
 		<meta charset="utf-8">
+		<title>The Axiom Space Station | Resort</title>
+		<link rel="stylesheet" href="./css/one_page_website_axiom.css">
 	</head>
 	<body>
 	
@@ -38,7 +39,7 @@
 					<!-- PHOTO-CONTAINER 1-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_1.jpg" alt="Axiom Bridge">
+							<img src="./images/thumb/thumbnail_1.jpg" width="640" height="360" alt="Axiom Bridge">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight today!</p>
@@ -50,7 +51,7 @@
 					<!-- PHOTO-CONTAINER 2-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_2.jpg" alt="Axiom in Space">
+							<img src="./images/thumb/thumbnail_2.jpg" width="640" height="360" alt="Axiom in Space">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -62,7 +63,7 @@
 					<!-- PHOTO-CONTAINER 3-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_3.jpg" alt="Axiom Dining">
+							<img src="./images/thumb/thumbnail_3.jpg" width="640" height="360" alt="Axiom Dining">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -74,7 +75,7 @@
 					<!-- PHOTO-CONTAINER 4-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_4.png" alt="Wall-E in Space">
+							<img src="./images/thumb/thumbnail_4.png" width="640" height="360" alt="Wall-E in Space">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -86,7 +87,7 @@
 					<!-- PHOTO-CONTAINER 5-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_5.png" alt="Axiom Pool Deck">
+							<img src="./images/thumb/thumbnail_5.png" width="640" height="360" alt="Axiom Pool Deck">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -98,7 +99,7 @@
 					<!-- PHOTO-CONTAINER 6-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_6.png" alt="Axiom Shopping">
+							<img src="./images/thumb/thumbnail_6.png" width="640" height="360" alt="Axiom Shopping">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -110,7 +111,7 @@
 					<!-- PHOTO-CONTAINER 7-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_7.jpg" alt="Setting Planets">
+							<img src="./images/thumb/thumbnail_7.jpg" width="640" height="360" alt="Setting Planets">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -122,7 +123,7 @@
 					<!-- PHOTO-CONTAINER 8-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_8.jpg" alt="Blue Planets">
+							<img src="./images/thumb/thumbnail_8.jpg" width="640" height="360" alt="Blue Planets">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -134,7 +135,7 @@
 					<!-- PHOTO-CONTAINER 9-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_9.jpg" alt="Star Field">
+							<img src="./images/thumb/thumbnail_9.jpg" width="640" height="360" alt="Star Field">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -146,7 +147,7 @@
 					<!-- PHOTO-CONTAINER 10-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_10.png" alt="Wall-E and Eva in Space">
+							<img src="./images/thumb/thumbnail_10.png" width="640" height="360" alt="Wall-E and Eva in Space">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -158,7 +159,7 @@
 					<!-- PHOTO-CONTAINER 11-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_11.jpg" alt="Wall-E Northern Lights">
+							<img src="./images/thumb/thumbnail_11.jpg" width="640" height="360" alt="Wall-E Northern Lights">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -170,7 +171,7 @@
 						<!-- PHOTO-CONTAINER 12-->
 					<div>
 						<div>
-							<img src="./images/thumb/thumbnail_12.png" alt="Axiom Main Interior">
+							<img src="./images/thumb/thumbnail_12.png" width="640" height="360" alt="Axiom Main Interior">
 							<div>
 								<h3>Click to Enlarge</h3>
 								<p>We have space launches departing daily, book your flight to The Axiom - today!</p>
@@ -184,9 +185,9 @@
 		</section>		
 		<!-- END GALLERY -->
 		
-		<!-- RSVP -->
+		<!-- RESERVATIONS -->
 		<section>
-			<div id="contact">
+			<div id="rsvp">
 				<div>
 					<h1>Reservations</h1>
 					<div>
