Updated to 4.3.1 version to get pills to work, and About section link fixed

--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Academy Cinemas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
 
@@ -63,7 +63,7 @@
               </div>
 
               <div class="col-sm">
-                <section id="About">
+                <section id="about">
                   <h3>The Ultimate Classic Movie Experience</h3>
                   <p>Located in eclectic West Asheville, North Carolina, our reels have been spinnings since 1959.</p>
                   <p>Showing our guests a great time...through great vintage films...is our passion</p>
